# s2-sim

./: AGENTS.md  s2_design.md
.claude/: settings.local.json
docker/: Dockerfile  Dockerfile.ros2  docker-compose.yml  fastdds.xml
docs/: 00-infrastructure.md  01-core-types.md  02-tick-loop.md  03-world-geometry.md  03.5-visualizer.md  04-agents-basic.md  04.10-color-plugin.md  04.5-interactive-visualizer.md  04.6-plugin-control.md  04.7-plugin-fixes.md  04.8-kinematic-tree.md  04.9-urdf-joint-vel.md  04.9.1-joint-vel-ui-fixes.md  05-zones-effects.md  06-sensors-resources.md  07-actors-door.md  08-interactions.md  09-visualizer.md  10-transport-ros2.md  10.1-transport-ros2-mvp.md  11-config-transport-viz.md  12-viz-overlay-plugins.md  13-full-documentation.md  ARCHITECTURE.md  PROJECT.md  QUICKSTART.md  known_bugs.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
workspace/: CMakeLists.txt
workspace/s2_config/robots/: dozer.urdf
workspace/s2_config/scenes/: test_basic.yaml  test_dozer.yaml  test_ros2.yaml  test_ros2_full.yaml  test_two_robots.yaml  test_viz_overlay.yaml
workspace/s2_core/: CMakeLists.txt
workspace/s2_core/include/s2/: actor.hpp  agent.hpp  geo_origin.hpp  heightmap.hpp  kinematic_tree.hpp  plugin_base.hpp  prop.hpp  raycast_engine.hpp  scene_loader.hpp  sensor_data.hpp  shared_state.hpp  sim_bus.hpp  sim_engine.hpp  transport_adapter.hpp  triple_buffer.hpp  types.hpp  urdf_loader.hpp  world.hpp  world_snapshot.hpp
workspace/s2_core/src/: kinematic_tree.cpp  placeholder.cpp  sim_engine_viz.cpp  urdf_loader.cpp  world_snapshot.cpp
workspace/s2_core/tests/: test_color_plugin.cpp  test_geometry.cpp  test_joint_vel_plugin.cpp  test_kinematic_tree.cpp  test_plugin_input.cpp  test_ros2_transport.cpp  test_shared_state.cpp  test_sim_bus.cpp  test_sim_engine.cpp  test_sim_transport_bridge.cpp  test_smoke.cpp  test_snapshot_viz.cpp  test_triple_buffer.cpp  test_types.cpp  test_urdf.xml  test_urdf_loader.cpp  test_world_snapshot.cpp
workspace/s2_msgs/: CMakeLists.txt
workspace/s2_msgs/srv/: PluginCall.srv
workspace/s2_msgs_ws/install/: local_setup.sh  setup.sh
workspace/s2_msgs_ws/install/s2_msgs/include/s2_msgs/s2_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
workspace/s2_msgs_ws/install/s2_msgs/include/s2_msgs/s2_msgs/srv/: plugin_call.h  plugin_call.hpp
workspace/s2_msgs_ws/install/s2_msgs/include/s2_msgs/s2_msgs/srv/detail/: plugin_call__builder.hpp  plugin_call__functions.h  plugin_call__rosidl_typesupport_fastrtps_c.h  plugin_call__rosidl_typesupport_fastrtps_cpp.hpp  plugin_call__rosidl_typesupport_introspection_c.h  plugin_call__rosidl_typesupport_introspection_cpp.hpp  plugin_call__struct.h  plugin_call__struct.hpp  plugin_call__traits.hpp  plugin_call__type_support.h  plugin_call__type_support.hpp
workspace/s2_msgs_ws/install/s2_msgs/share/ament_index/resource_index/package_run_dependencies/: s2_msgs
workspace/s2_msgs_ws/install/s2_msgs/share/ament_index/resource_index/parent_prefix_path/: s2_msgs
workspace/s2_msgs_ws/install/s2_msgs/share/ament_index/resource_index/rosidl_interfaces/: s2_msgs
workspace/s2_msgs_ws/install/s2_msgs/share/s2_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/s2_msgs_ws/install/s2_msgs/share/s2_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_s2_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_s2_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  s2_msgsConfig-version.cmake  s2_msgsConfig.cmake  s2_msgs__rosidl_typesupport_cExport-noconfig.cmake  s2_msgs__rosidl_typesupport_cExport.cmake  s2_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  s2_msgs__rosidl_typesupport_introspection_cppExport.cmake
workspace/s2_msgs_ws/install/s2_msgs/share/s2_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
workspace/s2_msgs_ws/install/s2_msgs/share/s2_msgs/srv/: PluginCall.idl  PluginCall.json  PluginCall.srv
workspace/s2_msgs_ws/log/: latest_build
workspace/s2_msgs_ws/src/s2_msgs/: package.xml
workspace/s2_plugins/: CMakeLists.txt
workspace/s2_plugins/include/s2/plugins/: color.hpp  diff_drive.hpp  gnss.hpp  imu.hpp  joint_vel.hpp  path_display.hpp  plugin_base.hpp  trajectory_recorder.hpp
workspace/s2_plugins/src/: color.cpp  joint_vel.cpp  plugins_registry.cpp
workspace/s2_transport/: CMakeLists.txt  package.xml
workspace/s2_transport/include/s2/: ros2_transport.hpp  ros2_transport_adapter.hpp  sim_transport_bridge.hpp
workspace/s2_transport/src/: ros2_transport.cpp  ros2_transport_adapter.cpp  ros2_transport_adapter_stub.cpp  ros2_transport_stub.cpp  sim_transport_bridge.cpp
workspace/s2_visualizer/: CMakeLists.txt
workspace/s2_visualizer/src/: main.cpp  sim_engine_viz_impl.cpp  viz_server.cpp  viz_server.hpp
workspace/s2_visualizer/web/: index.html
workspace/s2_visualizer/web/js/: app.js
